[package]
name = "derive_step"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"
authors = ["perpetualcacophony"]
description = "A derive macro for the unstable Step trait."
repository = "https://github.com/perpetualcacophony/derive_step"
exclude = ["/tests"]

[lib]
proc-macro = true

[dependencies]
manyhow = "~0.11"
syn = { version = "~2.0", features = [
    "derive",
    "printing",
    "proc-macro",
    "full",
], default-features = false }
